[package]
name = "ap-startup"
version = "0.2.2"
edition = "2024"
description = "Start x86 application processors and jump to an entry point."
repository = "https://github.com/RoxyOS/ap-startup"
license = "MIT"
readme = "README.md"
keywords = ["trampoline", "ap", "smp", "x86", "startup"]
categories = ["no-std", "hardware-support"]

[dependencies]
acpi = "6.1"
x2apic = "0.5"
x86_64 = "0.15"
